<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/track_item_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/track_title_textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:minHeight="30dp"
        android:text="@string/track_title_hint" />

    <TextView
        android:id="@+id/track_artist_textView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/track_title_textView"
        android:minHeight="30dp"
        android:text="@string/artist_hint"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/track_album_textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/track_title_textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="9dp"
        android:minHeight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/album_hint" />

    <TextView
        android:id="@+id/track_date_textView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/track_artist_textView"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_toEndOf="@+id/track_album_textView"
        android:minHeight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/date_hint"
        android:textAlignment="textEnd" />
</RelativeLayout>