<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/searchBar_editText"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:text="@string/search_keyword_hint" />

    <SeekBar
        android:id="@+id/limit_seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchBar_editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:max="25"
        android:min="5"
        android:progress="10" />

    <TextView
        android:id="@+id/limit_display_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchBar_editText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="11dp"
        android:text="@string/limit_display_placeholder"
        android:textSize="16sp" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/limit_seekBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="163dp"
        android:text="@string/search_button_text" />

    <RadioGroup
        android:id="@+id/sorting_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_button"
        android:layout_marginStart="19dp"
        android:layout_marginTop="9dp"
        android:layout_toEndOf="@+id/sort_by_textView"
        android:checkedButton="@+id/track_rating_radioButton"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/track_rating_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/sorting_radioGroup"
            android:text="@string/track_rating_button_text" />

        <RadioButton
            android:id="@+id/artist_rating_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/sorting_radioGroup"
            android:text="@string/artist_rating_button_text" />
    </RadioGroup>

    <TextView
        android:id="@+id/sort_by_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="15dp"
        android:text="@string/sort_by_text" />

    <TextView
        android:id="@+id/search_results_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sorting_radioGroup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="14dp"
        android:text="@string/search_results_text"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/results_listView"
        android:layout_width="wrap_content"
        android:layout_height="445dp"
        android:layout_below="@+id/search_results_textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="11dp" />

    <ProgressBar
        android:id="@+id/loading_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignStart="@+id/results_listView"
        android:layout_alignTop="@+id/results_listView"
        android:layout_marginStart="95dp"
        android:layout_marginTop="68dp"
        android:visibility="invisible" />

</RelativeLayout>